[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ultk"
version = "0.0.1c"
authors = [
  { name="Nathaniel Imel", email="nimel@uci.edu"},
  { name="Shane Steinert-Threlkeld", email="shanest@uw.edu" },
]
description = "ULTK is a software library that aims to support efficient communication analyses of natural language. This is a line of research that aims to explain why natural languages have the structure that they do in terms competing pressures to minimize cognitive complexity and maximize communicative accuracy."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.txt"}
dependencies = [
    "numpy",
    "nltk",
    "pyyaml",
    "pandas",
    "plotnine",
    "pathos",
    "embo",
    "pytest",
]

[project.urls]
"Homepage" = "https://clmbr.shane.st/altk"
"Bug Tracker" = "https://github.com/CLMBRs/altk/issues"