[project]
name = "ultk"
version = "0.0.1c"
authors = [
  { name="Chris Haberland", email="haberc@uw.edu"},
  { name="Nathaniel Imel", email="nimel@uci.edu"},
  { name="Shane Steinert-Threlkeld", email="shanest@uw.edu" },
]
description = "ULTK is a software library that aims to support efficient communication analyses of natural language. This is a line of research that aims to explain why natural languages have the structure that they do in terms competing pressures to minimize cognitive complexity and maximize communicative accuracy."
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE.txt"}
dependencies = [
    "mypy",
    "numpy",
    "nltk",
    "pyyaml",
    "pandas",
    "plotnine",
    "pathos",
    "pytest",
    "scipy>=1.7.3",
    "scipy-stubs[scipy]>=1.16.3.3",
]

[project.urls]
"Homepage" = "https://clmbr.shane.st/ultk"
"Bug Tracker" = "https://github.com/CLMBRs/ultk/issues"

[build-system]
# requires = ["setuptools>=42", "wheel"]
# build-backend = "setuptools.build_meta"
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"


# [tool.uv]
# package = true
