[package]
name = "ultk-grammar"
version = "0.1.0"
edition = "2021"

[lib]
name = "ultk_grammar"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
ahash = "0.8"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
