[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ultk-grammar-rust"
version = "0.1.0"
description = "High-performance Rust implementation of ULTK grammar enumeration"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "ultk_grammar._ultk_grammar"
